--- a/IDA shortcuts/IDA-shortcuts.tex
+++ b/IDA shortcuts/IDA-shortcuts.tex
@@ -1,37 +1,43 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = en_US
-\documentclass[fontsize=11pt,paper=A4,landscape,DIV=24,BCOR=0pt,parskip=false,version=last]{scrartcl}
+\documentclass[fontsize=10pt,paper=A4,landscape,DIV=32,BCOR=0pt,parskip=false,version=last]{scrartcl}
 %%\usepackage{lua-visual-debug}
 \usepackage{fontspec-luatex}
 \usepackage{libertine}
 \usepackage{multicol}
 \usepackage{csquotes}
-\usepackage[normalem]{ulem}
 \usepackage{tabularray}
 \usepackage[hidelinks]{hyperref}
 \usepackage{microtype}
 \usepackage{pdfpages}
+\usepackage{fontawesome5}
+\usepackage{tikz}
+\usepackage[os=win]{menukeys}
 
-\setmainfont{Linux Libertine O}
-\setsansfont{Linux Biolinum O}
+\setmainfont[Ligatures=TeX]{Linux Biolinum O}
+\setsansfont[Ligatures=TeX]{Linux Biolinum O}
 \setmonofont{Linux Libertine Mono O}
 
 \setlength{\parindent}{0pt}
-%\RedeclareSectionCommand[beforeskip=-5.5ex plus -1ex minus -.2ex,afterskip=1.3ex plus -.2ex]{section}
-%\setparsizes{0pt}{0pt}{0pt plus 1fil}
-%\setlength{\parfillskip}{0pt plus 1fil}
+\AfterPreamble{\hypersetup{
+  pdfauthor={Oliver Schneider},
+  pdftitle={IDA \& Hex-Rays keyboard shortcuts cheat sheet},
+  pdfsubject={Cheat sheet listing IDA \& Hex-Rays decompiler plugin keyboard shortcuts},
+  pdfkeywords={IDA,Hex-Rays,shortcuts,keyboard,cheatsheet,reference},
+}}
 
 %% For the usual 2-column table
 \NewTblrEnviron{kbdtblr}
 \SetTblrInner[kbdtblr]{
-    colspec={X[1,m]X[2,m,font=\small]},
+    colspec={X[1,m,font=\smaller]X[2,m,font=\small]},
     row{odd} = {bg=gray9},
     row{1}   = {bg=azure8,font=\large\sffamily\bfseries},
 }
+
+\definecolor{firebrick}{rgb}{0.7, 0.13, 0.13}
 \newcommand{\mnem}[1]{\underline{\textbf{#1}}}
-\newcommand{\LKeyShiftF}[1]{\LKeyShift+\LKeyF{#1}}
-\newcommand{\LKeyCtrlF}[1]{\LKeyCtrl+\LKeyF{#1}}
-\newcommand{\hexrays}{\textsf{\tiny[Hex-Rays]}}
+\newcommand{\hexrays}{\tikz[anchor=base,baseline,font=\small]{\node[opacity=.5,draw,color=firebrick,densely dotted,thick,rounded corners,inner sep=2pt]{{\tiny !}\,\footnotesize\faIcon{code}};}}
+\newcommand{\hexraysalso}{\tikz[anchor=base,baseline,font=\small]{\node[opacity=.5,draw,color=firebrick,densely dotted,thick,rounded corners,inner sep=2pt]{{\tiny\&}\,\footnotesize\faIcon{code}};}}
 
 \begin{document}
 \pagestyle{empty} % suppress the page number etc.
@@ -40,153 +46,181 @@
 
 \begin{kbdtblr}{rl}
 \SetCell[c=2]{c} File Operations \\
-\LKeyCtrlF{9} & Parse C header file \\
-\LKeyAltF{10} & Create ASM file \\
-\LKeyCtrlX{W} & Save database \\
-{\LKeyAltF{4} \LKeyAltX{X}} & Exit and save \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Navigation \\
-\LKeyEnter & Jump to operand \\
-\LKeyAlt+\LKeyEnter & Jump in a new window \\
-\LKeyEsc & Jump back \\
-\LKeyCtrl+\LKeyEnter & Jump forward \\
-\LKey{G} & \mnem{G}o to address \\
-\LKeyCtrlX{L} & Jump by \mnem{l}abel (name) \\
-\LKeyCtrlX{P} & Jump by function (\mnem{p}roc) \\
-\LKeyCtrlX{S} & Jump to \mnem{s}egment \\
-\LKeyCtrlX{G} & Jump to segment register \\
-\LKeyCtrlX{X} & List \mnem{x}refs \emph{to} ... \\
-\LKey{X} & Jump to \mnem{x}ref to operand \\
-\LKeyTab & Jump to pseudocode \\
-\LKeyCtrlX{E} & Jump to \mnem{e}ntry point \\
-\LKeyAltX{M} & \mnem{B}ookmark position \\
-\LKeyCtrlX{M} & Jump to \mnem{b}ookark \\
-\LKeyCtrlX{Q} & Jump to problem \\
-\LKeyCtrlX{F} & Erroneous operand \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Search \\
-\LKeyAltX{C} & Next \mnem{c}ode \\
-\LKeyCtrlX{D} & Next \mnem{d}ata \\
-\LKeyCtrlX{A} & Next explored \\
-\LKeyCtrlX{U} & Next \mnem{u}nexplored \\
-\LKeyAltX{I} & \mnem{I}mmediate value \\
-\LKeyCtrlX{I} & Next \mnem{i}mmediate value \\
-\LKeyAltX{T} & \mnem{T}ext \\
-\LKeyCtrlX{T} & Next \mnem{t}ext \\
-\LKeyAltX{B} & Sequence of \mnem{b}ytes \\
-\LKeyCtrlX{B} & Next sequence of \mnem{b}ytes \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Edit \\
-\LKey{N} & Rename \\
-\LKey{C} & Make code \\
-\LKey{D} & Make string \\
-\LKey{D} & Make data / cycle types \\
-\LKey{U} & Undefine \\
-\LKey{asterisk} or \LKeyPad{13} & Make array \\
-\LKey{O} & Offset (data segment) \\
-\LKeyCtrlX{O} & Offset (current segment) \\
-\LKeyAltX{R} & Offset by (any segment) \\
-\LKeyCtrlX{R} & Offset (user-defined) \\
-\LKey{numbersign} & Number (default) \\
-\LKey{Q} & Hexadecimal \\
-\LKey{H} & Decimal \\
-\LKey{B} & \mnem{B}inary \\
-\LKey{R} & Cha\mnem{r}acter \\
-\LKey{S} & \mnem{S}egment \\
-\LKey{M} & Enum \mnem{m}ember \\
-\LKey{K} & Stac\mnem{k} variable \\
-\LKey{underscore} & Change sign \\
-\LKey{asciitilde} & Bitwise negate \\
-\LKeyAltX{A} & String literals \\
-\LKeyAltX{D} & Setup data types \\
-\LKeyAltX{S} & Edit segment \\
-\LKeyAltX{G} & Change segment register \\
-\LKeyAltX{Q} & Struct variable \\
-\LKeyAltX{Y} & Select union member \\
-\LKeyCtrlX{Z} & Undo \\
-\LKeyShiftCtrlX{Z} & Redo \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Comments \\
-\LKey{semicolon} & Repeatable comment \\
-%% On first instruction becomes the function comment
-\LKey{colon} & Comment \\
-\LKeyIns & Anterior lines \\
-%% Also works on database comment at the top
-\LKeyShift+\LKeyIns & Posterior lines \\
-\LKey{slash} & {\hexrays} Line comment
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Subviews \\
-\LKeyShiftF{1} & Open \emph{Local types} \\
-\LKeyShiftF{3} & Open \emph{Functions} \\
-\LKeyShiftF{4} & Open \emph{Names} \\
-\LKeyShiftF{5} & Open \emph{Signatures} \\
-\LKeyShiftF{7} & Open \emph{Segments} \\
-\LKeyShiftF{8} & Open \emph{Segment registers} \\
-\LKeyShiftF{9} & Open \emph{Structures} \\
-\LKeyShiftF{10} & Open \emph{Enumerations} \\
-\LKeyShiftF{11} & Open \emph{Type libraries} \\
-\LKeyShiftF{12} & Open \emph{Strings} \\
-\LKeyAltF{9} & Recent scripts \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Functions (aka procedures) \\
-\LKey{X} & Create function (\mnem{p}roc) \\
-\LKeyAltX{P} & Edit function (\mnem{p}roc) \\
-\LKey{E} & Set \mnem{e}nd of function \\
-\LKeyCtrlX{K} & Stac\mnem{k} variables \\
-\LKeyAltX{K} & Change stac\mnem{k} pointer \\
-\LKey{V} & Rename register \\
-\LKey{Y} & Set function t\mnem{y}pe \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Lumina (metadata service) \\
-\LKeyF{12} & Pull all metadata \\
-\LKeyCtrlF{12} & Push all metadata \\
-\LKeyAltF{12} & View all metadata \\
-\end{kbdtblr}
-
-\begin{kbdtblr}{rl}
-\SetCell[c=2]{c} Debugger \\
-\LKeyF{2} & Add breakpoint \\
-\LKeyF{9} & Start process \\
-\LKeyCtrlF{2} & Terminate process \\
-\LKeyF{7} & Step into \\
-\LKeyF{8} & Step over \\
-\LKeyCtrlF{7} & Run until return \\
-\LKeyF{4} & Run to cursor \\
-\LKeyCtrlAltX{B} & Breakpoint list \\
-\LKeyCtrlAltX{S} & Stack trace \\
+\keys{F9}           & Parse C header file \\
+\keys{\Alt + F10}   & Create ASM file \\
+\keys{\ctrl + W}    & Save/\mnem{w}rite database \\
+{\keys{\Alt + F4} \\ \keys{\Alt + X}}
+                    & E\mnem{x}it and save \\
 \end{kbdtblr}
 
 \begin{kbdtblr}{rl}
 \SetCell[c=2]{c} Dialog Boxes \\
-{\LKeyTab \\ \LKeyShift{}+\LKeyTab} & Navigate \\
-\LKeySpace && Toggle \\
-{\LKeyEnter \\ \LKeyAltX{K} \\ \LKeyCtrl{}+\LKeyEnter} & Confirm \\
-{\LKeyEsc \\ \LKeyAltF{4}} & Cancel \\
+{\keys{\tab} \\ \keys{\shift + \tab}}
+                    & Navigate the controls \\
+\keys{\SPACE}       & Toggle, e.g. checkboxes \\
+{\keys{\return} \\ \keys{\Alt + K} \\ \keys{\ctrl + \return}}
+                    & Confirm (O\mnem{K}) \\
+{\keys{Esc} \\ \keys{\Alt + F4}}
+                    & Cancel \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Navigation \\
+\keys{\return}      & Jump to operand \\
+\keys{\Alt + \return}
+                    & Jump in a new window \\
+\keys{\ctrl + \return}
+                    & Jump forward \\
+\keys{\esc}         & Jump back \\
+\keys{G}            & \mnem{G}o to address \\
+\keys{\ctrl + L}    & Jump by \mnem{l}abel (name) \\
+\keys{\ctrl + P}    & Jump by function (\mnem{p}roc) \\
+\keys{\ctrl + S}    & Jump to \mnem{s}egment \\
+\keys{\ctrl + G}    & Jump to segment re\mnem{g}ister \\
+\keys{\ctrl + X}    & List \mnem{x}refs \emph{to} ... \\
+\keys{X}            & Jump to \mnem{x}ref to operand \\
+{\hexraysalso} \keys{\tab}
+                    & Jump between pseudocode \& assembly \\
+\keys{\ctrl + E}    & Jump to \mnem{e}ntry point \\
+\keys{\Alt + M}     & \mnem{B}ookmark position \\
+\keys{\ctrl + M}    & Jump to \mnem{b}ookark \\
+\keys{\ctrl + Q}    & Jump to problem \\
+\keys{\ctrl + F}    & Erroneous operand \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Search \\
+\keys{\Alt + C}     & Next \mnem{c}ode \\
+\keys{\ctrl + D}    & Next \mnem{d}ata \\
+\keys{\ctrl + A}    & Next explored \\
+\keys{\ctrl + U}    & Next \mnem{u}nexplored \\
+\keys{\Alt + I}     & \mnem{I}mmediate value \\
+\keys{\ctrl + I}    & Next \mnem{i}mmediate value \\
+\keys{\Alt + T}     & \mnem{T}ext \\
+\keys{\ctrl + T}    & Next \mnem{t}ext \\
+\keys{\Alt + B}     & Sequence of \mnem{b}ytes \\
+\keys{\ctrl + B}    & Next sequence of \mnem{b}ytes \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Lumina (metadata service) \\
+\keys{F12}          & Pull all metadata \\
+\keys{\ctrl + F12}  & Push all metadata \\
+\keys{\Alt + F12}   & View all metadata \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Comments \\
+\keys{;}            & Repeatable comment \\
+%% On first instruction becomes the function comment
+\keys{:}            & Comment \\
+\keys{Ins}          & Anterior lines \\
+%% Also works on database comment at the top
+\keys{\shift + Ins} & Posterior lines \\
+{\hexrays} \keys{/} & Line comment \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Debugger \\
+\keys{F2}           & Add breakpoint \\
+\keys{F9}           & Start process \\
+\keys{\ctrl + F2}   & Terminate process \\
+\keys{F7}           & Step into \\
+\keys{F8}           & Step over \\
+\keys{\ctrl + F7}   & Run until return \\
+\keys{F4}           & Run to cursor \\
+\keys{\ctrl+\Alt+B} & Breakpoint list \\
+\keys{\ctrl+\Alt+S} & Stack trace \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Edit \\
+{\hexraysalso} \keys{N}
+                    & Rename \\
+\keys{C}            & Make \mnem{c}ode \\
+\keys{A}            & Make string literal \\
+\keys{D}            & {Make \mnem{d}ata / cycle types\\ (a.k.a. \enquote{data carousel})} \\
+\keys{U}            & \mnem{U}ndefine \\
+\keys{*} or \keys{Num*}
+                    & Make array \\
+\keys{O}            & \mnem{O}ffset (data segment) \\
+\keys{\ctrl+ O}     & \mnem{O}ffset (current segment) \\
+\keys{\Alt + R}     & Offset by (any segment) \\
+\keys{\ctrl + R}    & Offset (user-defined) \\
+{\hexraysalso} \keys{T}
+                    & Offset (s\mnem{t}ruct) \\
+\keys{\#}           & Number (default) \\
+\keys{Q}            & Hexadecimal \\
+\keys{H}            & Toggle \mnem{H}exa-/decimal \\
+\keys{B}            & \mnem{B}inary \\
+\keys{R}            & Cha\mnem{r}acter (\enquote{ASCII}) \\
+\keys{S}            & \mnem{S}egment \\
+{\hexraysalso} \keys{M}
+                    & Enu\mnem{m} member \\
+\keys{K}            & Stac\mnem{k} variable \\
+{\hexraysalso} \keys{\_}
+                    & Change sign \\
+{\hexraysalso} \keys{\char`~}
+                    & Bitwise negate \\
+\keys{\Alt + A}     & String literals \\
+\keys{\Alt + D}     & Setup \mnem{d}ata types \\
+\keys{\Alt + S}     & Edit \mnem{s}egment \\
+\keys{\Alt + G}     & Change segment re\mnem{g}ister \\
+\keys{\Alt + Q}     & Struct variable \\
+{\hexrays} \keys{Y} & Set lvar t\mnem{y}pe \\
+\keys{\Alt + Y}     & Select union member \\
+\keys{\ctrl + Z}    & Undo \\
+\keys{\shift + \ctrl + Z}
+                    & Redo \\
+{\hexrays} \keys{\textbackslash}
+                    & Hide casts \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Subviews \\
+\keys{\shift + F1}  & Open \emph{Local types} \\
+\keys{\shift + F3}  & Open \emph{Functions} \\
+\keys{\shift + F4}  & Open \emph{Names} \\
+\keys{\shift + F5}  & Open \emph{Signatures} \\
+\keys{\shift + F7}  & Open \emph{Segments} \\
+\keys{\shift + F8}  & Open \emph{Segment registers} \\
+\keys{\shift + F9}  & Open \emph{Structures} \\
+\keys{\shift + F10} & Open \emph{Enumerations} \\
+\keys{\shift + F11} & Open \emph{Type libraries} \\
+\keys{\shift + F12} & Open \emph{Strings} \\
+\keys{\Alt + F9}    & Recent scripts \\
+\keys{\shift + \ctrl + M}
+                    & Show book\mnem{m}arks \\
+{\hexrays} \keys{F5}
+                    & Pseudocode \\
+\end{kbdtblr}
+
+\begin{kbdtblr}{rl}
+\SetCell[c=2]{c} Functions (aka procedures) \\
+\keys{X}            & Create function (proc) \\
+\keys{\Alt + P}     & Edit function (\mnem{p}roc) \\
+\keys{E}            & Set \mnem{e}nd of function \\
+\keys{\ctrl + K}    & Stac\mnem{k} variables \\
+\keys{\Alt + K}     & Change stac\mnem{k} pointer \\
+\keys{V}            & Rename register \\
+\keys{Y}            & Set function t\mnem{y}pe \\
 \end{kbdtblr}
 
 \begin{kbdtblr}{rl}
 \SetCell[c=2]{c} Miscellaneous \\
-\LKey{question} & Evaluate expression (calculator) \\
-\LKeyCtrl{}+\LKeyTab & Window list (next) \\
-\LKeyAltX{1} ... \LKeyAltX{9} & Switch to window \#1...9 \\
+\keys{?}            & Evaluate expression (calculator) \\
+\keys{\ctrl + \tab} & Window list (next) \\
+\keys{\Alt+ 1}\,..\,\keys{9} & Switch to tab/window \#1...9 \\
+\keys{\SPACE} & Toggle between graph \& flat \\
 \end{kbdtblr}
+
+\begin{flushright}
+\scriptsize
+CC0 \faIcon{creative-commons-zero} Oliver Schneider (assarbad.net), 2022-2023
+\end{flushright}
 
 \end{multicols}
 
-%% \url{https://hex-rays.com/blog/igor-tip-of-the-week-01-lesser-known-keyboard-shortcuts-in-ida/}
+% https://tex.stackexchange.com/q/5226
 
 \end{document}
