--- a/Rezepte/pfefferkuchen.tex
+++ b/Rezepte/pfefferkuchen.tex
@@ -5,7 +5,7 @@
     \errmessage{LuaTeX is required to typeset this document}
     \csname @@end\expandafter\endcsname
 \fi
-\documentclass[paper=A4,fontsize=12pt,DIV=18]{rezepte}
+\documentclass[paper=A4,fontsize=12pt,DIV=18,fraktur=true]{rezepte}
 \usepackage[autostyle]{csquotes} %% [autostyle,german=guillemets]
 \setmainlanguage{german}
 
