--- a/Wochentagsberechnung/Wochentagsberechnung.tex
+++ b/Wochentagsberechnung/Wochentagsberechnung.tex
@@ -6,27 +6,24 @@
 	\csname @@end\expandafter\endcsname
 \fi
 \documentclass[version=last,paper=A4,fontsize=11pt,DIV=18]{scrartcl}
-\usepackage[german]{babel}
+\usepackage{polyglossia}
+\setmainlanguage[spelling=old,variant=german]{german}
 \usepackage{amsmath}
 \usepackage{framed}
 \usepackage{microtype}
 \usepackage[autostyle,german=guillemets]{csquotes}
 \usepackage{url}
 \usepackage[table]{xcolor}
-\usepackage[no-math]{fontspec-luatex}
+\usepackage{fontspec-luatex}
 \usepackage{mathfont}
 \usepackage{fontawesome}
 \usepackage{luacode}
 %\usepackage{tikz}
 %\usetikzlibrary{tikzmark}
-\setmainfont{TeX Gyre Bonum}
+\setmainfont{TeX Gyre Bonum Math}
 \setsansfont{TeX Gyre Heros}
 \setmonofont{Source Code Pro}
-\mathfont{TeX Gyre Bonum Math}
-
-%\usepackage{parskip}
-%\usepackage{polyglossia}
-%\setmainlanguage{german}
+%\mathfont{TeX Gyre Bonum Math}
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.5\baselineskip plus2pt minus2pt}
