--- a/Rezepte/Pfefferkuchen.tex
+++ b/Rezepte/Pfefferkuchen.tex
@@ -5,13 +5,13 @@
     \errmessage{LuaTeX is required to typeset this document}
     \csname @@end\expandafter\endcsname
 \fi
-\documentclass[paper=A4,fontsize=12pt,DIV=18,fraktur=true]{rezepte}
+\documentclass[paper=A4,fontsize=12pt,DIV=18,fraktur=false]{rezepte}
 \usepackage[autostyle]{csquotes} %% [autostyle,german=guillemets]
 \setmainlanguage{german}
 
 \begin{document}
 
-\section*{Pfefferkuchen}
+\section*{Omas Pfefferkuchen}
 
 \subsection*{Zutaten}
 
