--- a/Rezepte/Brownies.tex
+++ b/Rezepte/Brownies.tex
@@ -39,7 +39,7 @@ Abwandlung des Rezepts von James Morton aus \enquote{How Baking Works (and what 
     \item Butter und Schokolade über einem Topf mit heißem Wasser -- oder in der Mikrowelle -- in einer Schüssel schmelzen; die Mischung dabei allenfalls lauwarm werden lassen.
     \item In einer anderen Schüssel die Eier und den Zucker\footnote{Falls ungesalzene Butter verwendet wurde, hier das Salz zugeben.} per Hand\footnote{Es geht darum möglichst wenig Luft einzutragen, die sich im Ofen erst ausdehnt und dann zu unschönen Rissen am Ende führt.} verrühren bis alles gerade vermischt ist.
     \item Die Schmelze zur Eier-Zucker-Mischung geben und ebenfalls per Hand verrühren bis alles gerade vermischt ist. Siehe vorheriger Schritt.
-    \item Mehl und Kakaopulver -- sowie die optionalen Zutaten -- hinzufügen und sachte\footnote{Es gilt die Entwicklung von Gluten -- also Klebereiwiß -- zu vermeiden/minimieren.} vermischen.
+    \item Mehl und Kakaopulver -- sowie die optionalen Zutaten -- hinzufügen und sachte\footnote{Es gilt die Entwicklung von Gluten -- also Klebereiweiß -- zu vermeiden/minimieren.} vermischen.
     \item Neunzig (90) Minuten bei 160 °C (140 °C bei Umluft\footnote{Bei Umluft würde ich Alufolie über die Springform spannen.}) backen.
 \end{itemize}
 
